--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "formserver",
   "version": "0.0.0",
-  "engines": {
-    "node": "18.x"
-  }
+  //"engines": {
+  //  "node": "18.x"
+  //}
   "private": true,
   
   "scripts": {
