--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "formserver",
   "version": "0.0.0",
   /*"engines": {
-  //  "node": "18.x"
-  */}
+  "node": "18.x"
+ } */
   "private": true,
   
   "scripts": {
