--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "formserver",
   "version": "0.0.0",
   "engines": {
-    "node": "14.x"
+    "node": "14.x",
+    "npm": "16.14.13"
   },
   "private": true,
   
